--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "@angular/platform-server": "^21.1.2",
     "@angular/router": "^21.1.2",
     "@angular/ssr": "^21.1.2",
+    "@fortawesome/angular-fontawesome": "^4.0.0",
+    "@fortawesome/fontawesome-svg-core": "^7.2.0",
+    "@fortawesome/free-brands-svg-icons": "^7.2.0",
+    "@fortawesome/free-regular-svg-icons": "^7.2.0",
+    "@fortawesome/free-solid-svg-icons": "^7.2.0",
     "@studio-freight/lenis": "^1.0.42",
     "express": "^5.1.0",
     "gsap": "^3.14.2",
